<resources>
    <string name="app_name">Trip Itinerary</string>
    <string name="save_excursion">Save Excursion</string>
    <string name="select_date">Select Date</string>
    <string name="excursion_details">Excursion Details</string>
    <string name="enter_title">Enter title</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="view_or_add_vacations">View or Add Vacations</string>
    <string name="view_vacation_report">View Vacation Report</string>
    <string name="vacation_search_and_report">Vacation Search and Report</string>
    <string name="search_for_vacation_by_title_or_hotel_name">Search for vacation by title or hotel name</string>
    <string name="vacation_title">Vacation Title:</string>
    <string name="vacation_title2">Vacation Title</string>
    <string name="hotel_name">Hotel Name:</string>
    <string name="hotel_name2">Hotel Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_excursion">Add Excursion</string>
    <string name="add_vacation">Add Vacation</string>
    <string name="your_vacations">Your Vacations</string>
    <string name="excursion_title">Excursion Title</string>
    <string name="excursion_date">Excursion Date</string>
    <string name="date">Date</string>
    <string name="delete_excursion">Delete Excursion</string>
    <string name="save_vacation">Save Vacation</string>
    <string name="delete_vacation">Delete Vacation</string>
    <string name="share">Share</string>
    <string name="add_sample_data">Add Sample Data</string>
</resources>